# semantic_gazebo_simulation

./: CMakeLists.txt  package.xml  readme.md
config/: label_colors.yaml
launch/: semantic_sim.launch
models/aws-robomaker-hospital-world-ros1/fuel_models/: database.config
models/aws-robomaker-hospital-world-ros1/fuel_models/HingedDoor/: model-1_4.sdf  model.sdf
models/aws-robomaker-hospital-world-ros1/models/aws_robomaker_hospital_floor_01_doorframes/: model.config  model.sdf
models/aws-robomaker-hospital-world-ros1/models/aws_robomaker_hospital_floor_01_doorframes/meshes/: aws_robomaker_hospital_floor_01_doorframes_collision.dae  aws_robomaker_hospital_floor_01_doorframes_visual.dae
models/aws-robomaker-hospital-world-ros1/models/aws_robomaker_hospital_floor_01_walls/: model.sdf
models/aws-robomaker-hospital-world-ros1/models/aws_robomaker_hospital_floor_01_walls/meshes/: aws_robomaker_hospital_floor_01_walls_collision_new.dae  aws_robomaker_hospital_floor_01_walls_visual_new.dae
models/aws-robomaker-hospital-world-ros1/models/aws_robomaker_hospital_floor_01_windows/: model.config  model.sdf
models/aws-robomaker-hospital-world-ros1/models/aws_robomaker_hospital_floor_01_windows/meshes/: aws_robomaker_hospital_floor_01_windows_collision.dae  aws_robomaker_hospital_floor_01_windows_visual.dae
models/aws-robomaker-hospital-world-ros1/models/semantic_rgbd_camera/: model.config  model.sdf
rviz/: rviz_semantic_gazebo_simulation.rviz
scripts/: semantic_cloud_publisher.py  set_hospital_export.sh
src/: camera_pose_transformer.cpp
worlds/: hospital.sdf
worlds/gui_config/: semantic_segmentation_gui.config
